[package]
name = "apiii"
version = "0.1.0"
edition = "2024"

[dependencies]
karics = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = "1.6.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.43.0", features = ["full"] }
dotenv = "0.15.0"
