[package]
name = "apiii"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"  # For simple password hashing (use bcrypt in production)
karics = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
hyper = "1.6.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }

tokio = { version = "1.43.0", features = ["full"] }
dotenv = "0.15.0"
rand = "0.8"